--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
 
 <style type="text/css">
 .css_btn_class {
-	font-size:24px;
+	font-size:20px;
 	font-family:Arial;
 	font-weight:normal;
 	-moz-border-radius:22px;
 	-webkit-border-radius:22px;
 	border-radius:22px;
 	border:0px solid #74b807;
-	padding:12px 37px;
+	padding:8px 37px;
 	text-decoration:none;
 	background:-webkit-gradient( linear, left top, left bottom, color-stop(5%, #89c403), color-stop(100%, #77a809) );
 	background:-moz-linear-gradient( center top, #89c403 5%, #77a809 100% );
@@ -58,7 +58,7 @@
 		<div class="top2_center">
 			<div class="top2_left">
 								<div class="plugins_info">
-			<br><br><br><br></br>
+			<br><br><br></br>
 							<br></br>
 	
 				<li>最新版本：3.0</li>
@@ -66,8 +66,9 @@
 				<li>更新日期：2019-03-08</li>
 				</div>
 				<br><br><br><br><br><br></br><br></br>
-				&nbsp;&nbsp;<a href="#" class="css_btn_class">立即下载</a>
-				
+				&nbsp;&nbsp;<a href="#" class="css_btn_class">下载地址1</a>&nbsp;&nbsp;&nbsp;<A><FONT color=#ffffff>提取码：fg56</FONT></A>
+				<P>&nbsp;</P>
+				&nbsp;&nbsp;<a href="#" class="css_btn_class">下载地址2</a>&nbsp;&nbsp;&nbsp;<A><FONT color=#ffffff>提取码：1fg6</FONT></A>
 			</div>
 
 			<div class="top2_right">
