--- a/index.html
+++ b/index.html
@@ -46,6 +46,37 @@
 /* CSS按钮生成器 */
 </style>
 
+<style type="text/css">
+body {
+padding: 0;
+margin: 0 auto;
+}
+
+ 
+
+#footer {
+height: 40px;
+line-height: 40px;
+position: fixed;
+bottom: 0;
+width: 100%;
+text-align: center;
+background: #333;
+color: #fff;
+font-family: Arial;
+font-size: 12px;
+letter-spacing: 1px;
+}
+
+ 
+
+.content {
+height: 1800px;
+width: 100%;
+text-align: center;
+}
+</style>
+<!--/* html底部 */-->
  </head>
  <body>
 	<div id="top1">
@@ -80,16 +111,8 @@
 			</div>
 		</div>
 	</div>
+<div id="footer">CopyRight@copy2012 </div>
 
-	<div id="top6">
-		<div class="top6_center">
-		<div class="top6_left">
-			<div class="top6_qqkf">QQ客服：2</div>
-			<div class="top6_tel">微信客服：j</div>
-						<div class="top6_tel">QQ客服：21</div>
 
-			<div class="top6_tel">投诉/建议等相关问题请联系邮箱：21@qq.com</div>
-			</div>
-	
  </body>
 </html>
